--- a/Entrega/Dodecafonismo-matematicas.bib
+++ b/Entrega/Dodecafonismo-matematicas.bib
@@ -1,4 +1,47 @@
 
+@misc{scho,
+author={Schoenberg, Arnold},
+title={Composition with twelve tones},
+url={http://music.ucsc.edu/sites/default/files/14.SchoenbergTwelveTone.pdf},
+year={1923},
+note={Publicado en {\it Style and Idea}}
+}
+
+@misc{wagner,
+	author={Wagner, Richard},
+	title={Oper und Drama},
+	url={http://users.skynet.be/johndeere/wlpdf/wlpr0063.pdf},
+	year={1851}
+}
+
+@misc{hauer,
+author={Schoenberg, Arnold},
+title={Hauer's Theories},
+url={https://books.google.cz/books?id=jbXtxJezk5cC},
+year={1923},
+note={Publicado en {\it Style and Idea}}
+}
+
+@book{jeppesen,
+author={Jeppesen, Knud},
+title={Counterpoint: The Polyphonic Vocal Style of the Sixteenth Century},
+isbn={9780486270364},
+lccn={39015933},
+series={(The Prentice-Hall music series)},
+url={https://books.google.es/books?id=OcSVGkug58gC},
+year={1992},
+publisher={Dover Publications}
+}
+
+@book{mha,
+author={de Aixquivel, J.},
+title = {Memorias de Historia Antigua},
+type = {book},
+url={https://books.google.es/books?id=m6zZrpltkzYC},
+publisher={Universidad de Oviedo},
+year      = 1989,
+}
+
 @misc{aguirre,
 author = {Aguirre, Felipe},
 title = {El concepto de ``disonancia" en Adorno y en la nueva música},
@@ -48,7 +91,7 @@ Volume = {41},
 	Pages = {93--98},
 year = {2011},
 note={Accesible en \url{http://www.hezkuntza.ejgv.euskadi.eus/r43-573/es/contenidos/informacion/dia6_sigma/es_sigma/adjuntos/sigma_24/6_Serialismo_musical.pdf}}
-}	
+}
 
 @misc{gom-1,
 author = {Gómez, Paco},
