--- a/Entrega/Dodecafonismo-matematicas.tex
+++ b/Entrega/Dodecafonismo-matematicas.tex
@@ -1,13 +1,8 @@
-\documentclass[a4, 11pt]{article}  
-
-%\usepackage{parskip}
-
+\documentclass[a4, 11pt]{article}
 
 \usepackage{microtype}
 %\usepackage[T1]{fontenc} % dejar solo para html
-%\usepackage[utf8]{inputenc}
 \usepackage[latin1]{inputenc}
-%\usepackage[a4paper]{geometry}
 
 \textwidth = 6.5 in 
 \textheight = 9 in 
@@ -18,18 +13,13 @@
 \headsep = 0.0 in
 \parindent = 0.3in
 \parskip=10pt
-
  
 \usepackage{graphicx}
 \graphicspath{{Fotos/}}
 
-\usepackage{cancel}
-
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{harmony}
-\usepackage{wasysym}
-
 \usepackage{enumerate}
 \usepackage{enumitem}
 
@@ -69,17 +59,13 @@
 \newcommand{\cita}[2][Tomado de]{{\footnotesize (#1 #2)}}
 
 \title{Dodecafonismo y matemáticas - I}
-\author{Celia Rubio}
-\date{Septiembre de 2019}                                           % Activate to display a given date or no date
+\author{Celia Rubio Madrigal}
+\date{Septiembre de 2019}
 
 \begin{document}
-\maketitle
-	
- 
+\maketitle 
 
 En las siguientes entregas de Divulgamat tendremos a una autora invitada, Celia Rubio, quien ha escrito una serie sobre el dodecafonismo y matemáticas. Celia Rubio está cursando el doble grado de Matemáticas e Informática en la Universidad Complutense de Madrid y tiene estudios de música en el Conservatorio de Madrid (su instrumento es la flauta de pico y el canto). Participó activamente en el congreso {\it Mathematics and Computation in Music 2019} (véanse las columnas~\cite{gom-1, gom-2}). Su preocupación e interés por la Teoría Matemática de la Música y su divulgación le empujó a mostrarme su texto.  Tras leerlo detenidamente, le propuse enseguida su publicación en esta columna. El lector disfrutará sin duda alguna de la claridad y la fuerza del texto. 
-
-%\tableofcontents
 	
 \section{Introducción}
 
@@ -87,14 +73,12 @@ En las siguientes entregas de Divulgamat tendremos a una autora invitada, Celia 
 	
 	En estas estructuras se centrará esta serie de artículos, y más específicamente en el \textit{dodecafonismo}, el primer sistema compositivo serialista. En este primer artículo hablaremos sobre sus orígenes (\hyperref[ch:historia]{sección 2)} y sobre los postulados matemáticos (\hyperref[ch:dodecafonismo]{sección 3})  que lo definieron, y analizaremos  una obra como ejemplo (\hyperref[ch:suite]{(sección 4)}. Más adelante generalizaremos las definiciones dodecafónicas matemáticamente, descubriremos la historia del \textit{serialismo integral}, y contaremos el número de posibles series distintas \textemdash o, más bien, de \textit{espectros seriales}\textemdash~que un compositor puede utilizar. En definitiva, haremos un recorrido a fondo por el serialismo y exploraremos sus posibilidades musicales y matemáticas.
 	
-Los textos irán dirigidos tanto a matemáticos como a músicos; en todas las entregas habrá secciones más matemáticas y secciones más musicales o históricas. Las matemáticas serán avanzadas, pero siempre se definirá todo lo que se utilice y se probará todo lo que se afirme. Algunas de las definiciones matemáticas más comunes se encuentran en la sección~\ref{ch:permutaciones}. ¡Que empiece el viaje!
+	Los textos irán dirigidos tanto a matemáticos como a músicos; en todas las entregas habrá secciones más matemáticas y secciones más musicales o históricas. Las matemáticas serán avanzadas, pero siempre se definirá todo lo que se utilice y se probará todo lo que se afirme. Algunas de las definiciones matemáticas más comunes se encuentran en la sección~\ref{ch:permutaciones}. ¡Que empiece el viaje!
 	
 	\input{01.Historia}%
 	\input{02.Dodecafonismo}%
 	\input{03.Suite}%
 	\input{00.Permutaciones}%
-	
-%	\input{Referencias}
 
 \bibliographystyle{plain}
 \bibliography{Dodecafonismo-matematicas.bib}
