--- a/Entrega/01.Historia.tex
+++ b/Entrega/01.Historia.tex
@@ -1,54 +1,47 @@
 \section{Introducción histórica del dodecafonismo}\label{ch:historia}
 
-Vamos a comenzar con una breve historia de la disonancia. La disonancia desempeñó un papel fundamental en la génesis del dodecafonismo, como veremos enseguida. 
-
+Vamos a comenzar con una breve historia de la disonancia. La disonancia desempeñó un papel fundamental en la génesis del dodecafonismo, como veremos en seguida.
 
 \subsection{La historia de la disonancia}
 La disonancia siempre ha formado parte de la experiencia musical. Con la música ha venido siempre emparejada la disonancia, mano a mano, como instrumento de contraste, confrontación y ruptura, pero también como elemento constructivo del discurso musical.
 
-En la Antigua Grecia, la armoní­a musical se consideraba unida al resto del universo. La rotación de los astros emití­a sonidos armónicos, y era la armoní­a la que apaciguaba el alma. Pero ¿qué era la armoní­a sino la unión de consonancia y disonancia? Como dijo Aristóteles:
+En la Antigua Grecia, la armonía musical se consideraba unida al resto del universo. La rotación de los astros emitía sonidos armónicos, y era la armonía la que apaciguaba el alma. Pero ¿qué era la armonía sino la unión de consonancia y disonancia? Como dijo Aristóteles:
 \begin{quote}
-\emph{El alma es armoní­a porque la armoní­a es mezcla y sí­ntesis de contrarios, y de contrarios se compone el cuerpo.}\\
-\cita{J. de Aixquivel, \textit{Memorias de Historia Antigua}, 1989.}
+\emph{El alma es armonía porque la armonía es mezcla y síntesis de contrarios, y de contrarios precisamente está compuesto el cuerpo.}\\
+{\footnotesize (Tomado de \cite{mha} J. de Aixquivel, \textit{Memorias de Historia Antigua}, 1989.)}
 \end{quote}
-\xxx{Cualquier fuente que cites tiene que estar en la bibliografía también. Esto se aplica a todo el documento entero.}
 
-Es bien sabido que la Escuela de Pitágoras, con su estudio sobre proporciones entre notas, buscaba encontrar cuáles eran los intervalos más consonantes. Encontraban, a su vez, aquellos que no lo eran, y es así­ como se dio comienzo a la teorí­a de la disonancia.\xxx{Sugerencia: este párrafo podría explicar un poco más la teoría de la disonancia de los pitagóricos.}
+Es bien sabido que la Escuela de Pitágoras, con su estudio sobre proporciones entre notas, buscaba encontrar cuáles eran los intervalos más consonantes. Encontraban, a su vez, aquellos que no lo eran, y es así como se dio comienzo a la teoría de la disonancia.\xxx{Sugerencia: este párrafo podría explicar un poco más la teoría de la disonancia de los pitagóricos.}
 
-Ya en la Edad Media, la polifoní­a fue forjando normas sobre su uso. La primera regla compositiva de la música occidental \textemdash según Knud Jeppesen\xxx{Pon esta referencia en la sección de bibliografía; en el texto  debería aparecer como Knud Jeppesen [X]} \textemdash~fue la \emph{regla franconiana}, que expresaba que las disonancias debí­an ocurrir en la parte débil del compás, mientras que las consonancias en la parte fuerte. Es así­ como los compositores trenzaban consonancia y disonancia al tejer los hilos de la música.
+Ya en la Edad Media, la polifonía fue forjando normas sobre su uso. La primera regla compositiva de la música occidental \textemdash según Knud Jeppesen \cite{jeppesen} \textemdash~fue la \emph{regla franconiana}, que expresaba que las disonancias debían ocurrir en la parte débil del compás, mientras que las consonancias en la parte fuerte. Es así como los compositores trenzaban consonancia y disonancia al tejer los hilos de la música.
 
-Poco a poco la disonancia pasó a ser usada como floritura melódica: en notas de paso, apoyaturas o retardos, entre otras. Esta función melódica fue impregnando el contrapunto hasta llegar a ser pieza clave en la continuidad de las voces. Adquirió entonces una nueva función contrapuntí­stica, ¿y quién no se ha deleitado al escuchar una disonancia \textit{bachiana}?
+Poco a poco la disonancia pasó a ser usada como floritura melódica: en notas de paso, apoyaturas o retardos, entre otras. Esta función melódica fue impregnando el contrapunto hasta llegar a ser pieza clave en la continuidad de las voces. Adquirió entonces una nueva función contrapuntística, ¿y quién no se ha deleitado al escuchar una disonancia \textit{bachiana}?
 
 Pero la disonancia estaba aún inscrita a la tonalidad reinante. No fue hasta la introducción de acordes extraños que la disonancia pasó a ser el centro de atención. Para ello hubo que esperar hasta el siglo XIX, que fue testigo de un desarrollo del sistema armónico sin precedentes. \xxx{Más poesía aquí, más luz, más lenguaje metafórico aquí.}
 
-%
 Para más información sobre la disonancia y su fascinante historia, recomendamos al lector el texto de Felipe Aguirre~\cite{aguirre}.
 
 \subsection{Wagner, Mahler y la emancipación de la disonancia}
-Aunque las posibilidades que prometí­a la tonalidad parecí­an inagotables, sus lí­mites comenzaron a percibirse hacia finales del siglo XIX. En palabras de Arnold Schoenberg:
+Aunque las posibilidades que prometía la tonalidad parecían inagotables, sus límites comenzaron a percibirse hacia finales del siglo XIX. En palabras de Arnold Schoenberg:
 \begin{quote}
-\emph{El oí­do se fue familiarizando gradualmente con gran número de disonancias, hasta que llegó a perder el miedo a su efecto perturbador.}\\
-\cita[Mencionado en]{\emph{Composition with twelve tones}, de \emph{Style and Idea}, 1950.}
+\emph{El oído se fue familiarizando gradualmente con gran número de disonancias, hasta que llegó a perder el miedo a su efecto perturbador.}\\
+{\footnotesize Mencionado en \cite{scho} \emph{Composition with twelve tones}, de \emph{Style and Idea}, 1950.}
 \end{quote}
 
-Esta época culminó con los dramas musicales de Richard Wagner, en los que todos los elementos de la obra estaban detalladamente estudiados por el compositor. A este concepto lo llamaba \emph{Gesamtkunstwerk} (``{obra de arte total}") \textemdash mencionado en {\emph{Oper und Drama}, 1851} \textemdash, ya que se aseguraba personalmente de que en sus óperas las artes escénicas, musicales, poéticas y visuales se combinaran entre sí­ a la perfección.
+Esta época culminó con los dramas musicales de Richard Wagner, en los que todos los elementos de la obra estaban detalladamente estudiados por el compositor. A este concepto lo llamaba \emph{Gesamtkunstwerk} (``obra de arte total") \textemdash mencionado en \cite{wagner} \emph{Oper und Drama}, 1851 \textemdash, ya que se aseguraba personalmente de que en sus óperas las artes escénicas, musicales, poéticas y visuales se combinaran entre sí a la perfección.
 
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=5cm]{Richard_Wagner.jpg}\\
-\caption{Richard Wagner (1813\textemdash1883); figura tomada de XXXX}
+\caption{Richard Wagner (1813\textemdash1883); figura tomada de \href{https://www.nationalgeographic.com.es/historia/actualidad/richard-wagner-nacimiento-y-muerte_7014}{National Geographic}.}
 \end{center}
 \end{figure}
-\xxx{Referencia la figura de arriba.}
 
+La idea del \emph{Gesamtkunstwerk} la desarrolló alrededor de 1850, y la plasmó en su totalidad en su ciclo de cuatro óperas \href{https://www.youtube.com/watch?v=1PBhlPeTJ_g}{\textit{Der Ring des Nibelungen}}, estrenado en 1876. Wagner controló y creó cada aspecto de la tetralogía, desde la música hasta el libreto, el vestuario y la escenografía. Incluso mandó crear su propia sala de conciertos en Bayreuth, el \emph{Festspielhaus}, para que el escenario se adecuara a sus ideas sobre el pensamiento y la cultura musical; véase~\cite{kinney}.
 
-La idea del \emph{Gesamtkunstwerk} la desarrolló alrededor de 1850, y la plasmó en su totalidad en su ciclo de cuatro óperas \href{https://www.youtube.com/watch?v=1PBhlPeTJ_g}{\textit{Der Ring des Nibelungen}}, estrenado en 1876. Wagner controló y creó cada aspecto de la tetralogí­a, desde la música hasta el libreto, el vestuario y la escenografí­a. Incluso mandó crear su propia sala de conciertos en Bayreuth, el \emph{Festspielhaus}, para que el escenario se adecuara a sus ideas sobre el pensamiento y la cultura musical; véase~\cite{kinney}.
+Así, a ojos de compositores posteriores, se habían agotado todas las posibilidades de la música tonal, y quizás ya había comenzado el viraje hacia el predominio de la disonancia con su abundante uso del cromatismo, como en el famoso primer acorde del drama musical \href{https://www.youtube.com/watch?v=SF4zN-Okonc}{\textit{Tristan und Isolde}} (1865). Consta de las notas fa-si-$\mbox{re\#}$-$\mbox{sol\#}$, y sus intervalos desde el fa son una cuarta aumentada, una sexta aumentada y una novena aumentada.
 
-Así­, a ojos de compositores posteriores, se habí­an agotado todas las posibilidades de la música tonal, y quizás ya habí­a comenzado el viraje hacia el predominio de la disonancia con su abundante uso del cromatismo, como en el famoso primer acorde del drama musical \href{https://www.youtube.com/watch?v=SF4zN-Okonc}{\textit{Tristan und Isolde}} (1865). Consta de las notas fa-si-$\mbox{re\#}$-$\mbox{sol\#}$, y sus intervalos desde el fa son una cuarta aumentada, una sexta aumentada y una novena aumentada.
-
-Después de Wagner, otros compositores también previeron emancipar la disonancia en sus obras. Gustav Mahler reflejaba en sus sinfoní­as la fragilidad de la tradición anterior y la inminencia de su ruptura. Ya más adelante, en 1911, utilizó en el \href{https://www.youtube.com/watch?v=vHyV8noUXC0}{Adagio} de su Décima Sinfoní­a una disonancia con casi todas las doce notas de la escala cromática. Sin duda, la tonalidad querí­a ser reemplazada.\xxx{Este párrafo suena un poco chirriante, como inglés. Escribe algo más brillante y potente.}
-%
-\cite{aguirre}
+Después de Wagner, otros compositores también estuvieron a las puertas de emancipar la disonancia, de desatarla de las ataduras que imponía la tonalidad. Por ejemplo, el gran compositor Gustav Mahler conseguía reflejar en sus sinfonías dos realidades paralelas: tanto la delicada fragilidad de la tradición anterior como la inminencia de su ruptura. El ejemplo más claro es el \href{https://www.youtube.com/watch?v=vHyV8noUXC0}{Adagio} de su Décima Sinfonía, que contiene una disonancia con once de las doce notas de la escala cromática. Y es que, sin lugar a dudas, la tonalidad ya preveía que iba a ser reemplazada. \xxx{No sé si esto es mejor que lo anterior.}
 
 \begin{figure}[h]
 \begin{center}
@@ -57,10 +50,10 @@ Después de Wagner, otros compositores también previeron emancipar la disonancia 
 \end{center}
 \end{figure}
 
-Siguiendo la concepción del \emph{progreso} como un camino ascendente, el paso siguiente para la composición musical debí­a consistir en deshacerse progresivamente de la tonalidad y desarrollar la ``{emancipación de la disonancia}"  \textemdash mencionado también en {\emph{Composition with twelve tones}} \textemdash. Así­, en el marco expresionista del cambio de siglo, fue como Arnold Schoenberg ideó sus teorí­as del pensamiento musical, y éstas dieron paso a la creación de la atonalidad.
+Siguiendo la concepción del progreso como un camino ascendente, el paso siguiente para la composición musical debía consistir en deshacerse progresivamente de la tonalidad y desarrollar la ``{emancipación de la disonancia}"  \textemdash mencionado también en \cite{scho} \emph{Composition with twelve tones} \textemdash. Así, en el marco expresionista del cambio de siglo, fue como Arnold Schoenberg ideó sus teorías del pensamiento musical, y éstas dieron paso a la creación de la atonalidad.
 
 \subsection{Hacia el atonalismo de Schoenberg}
-Fuertemente influido por Wagner y Mahler desde su adolescencia, Schoenberg comenzó componiendo al estilo posromántico de su época, llevando el cromatismo y la orquestación hasta el extremo. Sin embargo, y no espontáneamente, empezó a buscar en sus composiciones que cada sonido tuviera valor por sí­ mismo, un valor independiente de su funcionalidad tonal.
+Fuertemente influido por Wagner y Mahler desde su adolescencia, Schoenberg comenzó componiendo al estilo posromántico de su época, llevando el cromatismo y la orquestación hasta el extremo. Sin embargo, y no espontáneamente, empezó a buscar en sus composiciones que cada sonido tuviera valor por sí mismo, un valor independiente de su funcionalidad tonal.
 
 \begin{figure}[h]
 \begin{center}
@@ -69,37 +62,38 @@ Fuertemente influido por Wagner y Mahler desde su adolescencia, Schoenberg comen
 \end{center}
 \end{figure}
 
-Para él, la música no estaba intrí­nsecamente dirigida a una tónica. En las progresiones, lo importante era el paso de un acorde a otro, y no hacia dónde se dirigí­an estos. Además, él opinaba que se debí­an poder utilizar las notas de los modos eclesiásticos libremente, por lo que consideraba las notas no diatónicas tan válidas como las diatónicas. Esto hací­a imposible distinguir unas de otras, y apenas se podía identificar la tónica. De esta, y de otras muchas formas, Schoenberg conseguí­a que la jerarquí­a tonal quedara desestabilizada~\cite{kinney}.
+Para él, la música no estaba intrínsecamente dirigida a una tónica. En las progresiones, lo importante era el paso de un acorde a otro, y no hacia dónde se dirigían estos. Además, él opinaba que se debían poder utilizar las notas de los modos eclesiásticos libremente, por lo que consideraba las notas no diatónicas tan válidas como las diatónicas. Esto hacía imposible distinguir unas de otras, y apenas se podía identificar la tónica. De esta, y de otras muchas formas, Schoenberg conseguía que la jerarquía tonal quedara desestabilizada~\cite{kinney}.
 
-De esta época es su primera obra importante, \href{https://www.youtube.com/watch?v=vqODySSxYpc}{\emph{Verklärte Nacht}} ({\it Noche transfigurada}), Op. 4. Compuesto en 1899, este sexteto de cuerdas está inspirado por el poema homónimo de Richard Dehmel. La música, según su autor, expresa el paseo de un hombre y una mujer en medio del abrazo de la naturaleza.  Aunque en la obra aún prevalece la armoní­a tradicional basada en acordes, Schoenberg sitúa al oyente en un terreno de indefinición tonal, no sólo en el plano armónico sino también en el melódico. Además, hace uso del acorde de novena invertido, inexistente hasta entonces y, por tanto, rechazado por la crí­tica~\cite{diaz}.
+De esta época es su primera obra importante, \href{https://www.youtube.com/watch?v=vqODySSxYpc}{\emph{Verklärte Nacht}} ({\it Noche transfigurada}), Op. 4. Compuesto en 1899, este sexteto de cuerdas está inspirado por el poema homónimo de Richard Dehmel. La música, según su autor, expresa el paseo de un hombre y una mujer en medio del abrazo de la naturaleza.  Aunque en la obra aún prevalece la armonía tradicional basada en acordes, Schoenberg sitúa al oyente en un terreno de indefinición tonal, no sólo en el plano armónico sino también en el melódico. Además, hace uso del acorde de novena invertido, inexistente hasta entonces y, por tanto, rechazado por la crítica~\cite{diaz}.
 
 Tras pasar por la etapa tonal posromántica, y debido a su convicción en la inexorabilidad de la evolución de la música hacia el cromatismo total, en 1908 Schoenberg se desligó de la tonalidad completamente con el ciclo de canciones \href{https://www.youtube.com/watch?v=3iXsKhaZB2Q}{\emph{Das Buch der Hängenden Gärten}}. 
 
-A partir de entonces se dedicó a componer fragmentos muy breves cuya estructura era definida por motivos y no por la armoní­a. Era esto lo que solí­a ocurrir en formas musicales anteriores como la forma sonata. A este periodo en sus composiciones se le llama \emph{atonalidad libre}, aunque cabe destacar que Schoenberg rechazaba fervientemente este término:
+A partir de entonces se dedicó a componer fragmentos muy breves cuya estructura era definida por motivos y no por la armonía. Era esto lo que solía ocurrir en formas musicales anteriores como la forma sonata. A este periodo en sus composiciones se le llama \textbf{atonalidad libre}, aunque cabe destacar que Schoenberg rechazaba fervientemente este término:
 
 \begin{quote}
 \emph{La expresión ``música atonal'' es de lo más desafortunada \textemdash es como llamar a volar ``el arte de no caer'' o nadar ``el arte de no ahogarse''.}\\
-\cita[Mencionado en]{A. Schoenberg, \emph{Hauer's Theories}, en \emph{Style and Idea}, 1923.}
+{\footnotesize Mencionado en \cite{hauer} A. Schoenberg, \emph{Hauer's Theories}, en \emph{Style and Idea}, 1923.}
 \end{quote}
 
-\noindent A este periodo  pertenece también su famoso ciclo de canciones \href{https://www.youtube.com/watch?v=vQVkbKULKpI}{\emph{Pierrot Lunaire}}, Op. 21. Su nombre completo es {\it Tres veces siete poemas de Pierrot Lunaire de Albert Giraud}, ya que está dividida en 3 grupos de 7 canciones cada uno, cuyos textos son una selección de 21 poemas del ciclo homónimo de Albert Giraud. 
+\noindent A este periodo pertenece también su famoso ciclo de canciones \href{https://www.youtube.com/watch?v=vQVkbKULKpI}{\emph{Pierrot Lunaire}}, Op. 21 (1912). Su nombre completo es \textit{Tres veces siete poemas de Pierrot Lunaire de Albert Giraud}, ya que está dividida en 3 grupos de 7 canciones cada uno, cuyos textos son una selección de 21 poemas del ciclo homónimo de Albert Giraud. 
 
-Se encuentran en ella abundantes referencias al número 7. Schoenberg hace un uso extensivo de motivos de 7 notas a lo largo de la obra, mientras que el conjunto musical que la interpreta, incluyendo al director, consta de 7 miembros. De hecho, a este conjunto de instrumentos \textemdash flauta, clarinete, violí­n, violonchelo, piano y voz \textemdash~se le ha dado el nombre de \textit{ensemble Pierrot} en su honor.  Otros números importantes en la obra son el 3 y el 13. Cada poema consta de 13 lí­neas, mientras que la primera lí­nea de cada poema aparece 3 veces: en las lí­neas 1, 7 y 13.
+Se encuentran en ella abundantes referencias al número 7. Schoenberg hace un uso extensivo de motivos de 7 notas a lo largo de la obra, mientras que el conjunto musical que la interpreta, incluyendo al director, consta de 7 miembros. De hecho, a este conjunto de instrumentos \textemdash flauta, clarinete, violín, violonchelo, piano y voz \textemdash~se le ha dado el nombre de \textit{ensemble Pierrot} en su honor.  Otros números importantes en la obra son el 3 y el 13. Cada poema consta de 13 líneas, mientras que la primera línea de cada poema aparece 3 veces: en las líneas 1, 7 y 13.
 
 En esta obra no sólo hay una ausencia total de relaciones tonales, sino que el tratamiento vocal evita también cualquier relación estética con las técnicas tradicionales: es un \emph{Sprechgesang}, un canto hablado. De hecho, Schoenberg se refiere a estas piezas no como canciones, sino como melodramas. Véase~\cite{diaz} para más información.
 
 \subsection{El surgimiento del sistema dodecafónico}
-Schoenberg no estaba aún satisfecho con su técnica compositiva, ya que admiraba las obras extensas de los músicos románticos y pensaba que su atonalidad no podí­a sostener una obra de gran envergadura. Es decir, necesitaba un hilo conductor mejor que los motivos para poder componer obras atonales más largas.
+Schoenberg no estaba aún satisfecho con su técnica compositiva, ya que admiraba las obras extensas de los músicos románticos y pensaba que su atonalidad no podía sostener una obra de gran envergadura. Es decir, necesitaba un hilo conductor mejor que los motivos para poder componer obras atonales más largas.
 
-Por aquella época sufrió  crisis en varios aspectos de su vida. En lo personal, su mujer Matilde Zemlinsky acababa de abandonarlo por otro hombre, aunque posteriormente volverí­a junto al compositor. Y en lo profesional, sus obras no eran del gusto del público, por lo que no contaba con suficiente dinero para mantener a su familia. Todas estas circunstancias, unidas al desarrollo de la Primera Guerra Mundial, no le permitieron componer apenas entre 1914 y 1923.
+Por aquella época sufrió crisis en varios aspectos de su vida. En lo personal, su mujer Matilde Zemlinsky acababa de abandonarlo por otro hombre, aunque posteriormente volvería junto al compositor. Y en lo profesional, sus obras no eran del gusto del público, por lo que no contaba con suficiente dinero para mantener a su familia. Todas estas circunstancias, unidas al desarrollo de la Primera Guerra Mundial, no le permitieron componer apenas entre 1914 y 1923.
 
-Tras el final de la guerra, en 1919, Schoenberg fundó la Sociedad para Interpretaciones Musicales Privadas junto a sus discí­pulos y amigos Alban Berg y Anton Webern. Schoenberg, Berg y Webern se autodenominaron la Segunda Escuela de Viena en honor al grupo de compositores del siglo XVIII Haydn, Mozart y Beethoven, quienes formaban la Primera Escuela de Viena.
+Tras el final de la guerra, en 1919, Schoenberg fundó la Sociedad para Interpretaciones Musicales Privadas junto a sus discípulos y amigos Alban Berg y Anton Webern. Schoenberg, Berg y Webern se autodenominaron la Segunda Escuela de Viena en honor al grupo de compositores del siglo XVIII Haydn, Mozart y Beethoven, quienes formaban la Primera Escuela de Viena.
 
-En la Sociedad para Interpretaciones Musicales Privadas se presentaban músicas contemporáneas en circunstancias que favorecieran su adecuada apreciación. Así­ se evitaba que dichas obras, al no ser entendidas por el público, fueran inmediatamente rechazadas. Las obras de compositores como Mahler, Debussy, Bartók, Ravel, Strauss y Stravinsky fueron incluidas en los programas de conciertos organizados por la Sociedad.
+En la Sociedad para Interpretaciones Musicales Privadas se presentaban músicas contemporáneas en circunstancias que favorecieran su adecuada apreciación. Así se evitaba que dichas obras, al no ser entendidas por el público, fueran inmediatamente rechazadas. Las obras de compositores como Mahler, Debussy, Bartók, Ravel, Strauss y Stravinsky fueron incluidas en los programas de conciertos organizados por la Sociedad.
 
-En este contexto Schoenberg pudo reflexionar sobre sus técnicas compositivas, y al fin publicó en 1923 su ensayo \emph{Método de composición con doce sonidos}\xxx{Pon la referencia bibliográfica}, donde se describí­an por primera vez los axiomas del dodecafonismo. Estos axiomas constituían la solución al problema de la atonalidad libre que tanto le habí­a estado atormentando durante una década.
+En este contexto Schoenberg pudo reflexionar sobre sus técnicas compositivas, y al fin publicó en 1923 su ensayo \emph{Método de composición con doce sonidos}~\cite{scho}, donde se describían por primera vez los axiomas del dodecafonismo. Estos axiomas constituían la solución al problema de la atonalidad libre que tanto le había estado atormentando durante una década.
 
-Su primera obra í­ntegramente dodecafónica, publicada también en 1923, es la \href{https://www.youtube.com/watch?v=bQHR_Z8XVvI}{Suite para piano} Op. 25.\xxx{Sugerencia: yo pondría los vídeos en el centro de la página, al menos los más importantes.} Es la pieza más temprana en la que Schoenberg usa series dodecafónicas en cada uno de los movimientos. En dos obras anteriores a ella usa series dodecafónicas, pero en movimientos aislados: la Op. 23, \href{https://www.youtube.com/watch?v=7A9HSlgDlQE}{\emph{5 St\"ucke}} (1920\textemdash23), en el movimiento de Waltz final; y su \href{https://www.youtube.com/watch?v=fzAFalLbXxg}{Serenata}, Op. 24, en su Soneto central.
+Su primera obra íntegramente dodecafónica, publicada también en 1923, es la Suite para piano Op. 25, que podrán ver a continuación. Es la pieza más temprana en la que Schoenberg usa series dodecafónicas en cada uno de los movimientos. En dos obras anteriores a ella usa series dodecafónicas, pero en movimientos aislados: la Op. 23, \href{https://www.youtube.com/watch?v=7A9HSlgDlQE}{\emph{5 St\"ucke}} (1920\textemdash23), en el movimiento de Waltz final; y su \href{https://www.youtube.com/watch?v=fzAFalLbXxg}{Serenata}, Op. 24, en su Soneto central.
+
+\xxx{Incluir vídeo}
 
 Las series utilizadas en la Suite Op. 25 servirán de ejemplo en este texto, y su tercer movimiento, \href{https://www.youtube.com/watch?v=scwNtGdop6w}{Musette}, será estudiado y analizado en el apartado \ref{musette} con el fin de entender una obra dodecafónica en toda su extensión.
-
