--- a/Entrega/02.Dodecafonismo.tex
+++ b/Entrega/02.Dodecafonismo.tex
@@ -2,7 +2,7 @@
 \section{El sistema dodecafónico de Schoenberg}\label{ch:dodecafonismo}
 
 	\subsection{Los postulados del dodecafonismo}
-		El dodecafonismo es un sistema compositivo que predetermina la melodía y la armonía a partir de una ordenación de las doce notas de la escala cromática, que se llama \textit{serie}. Esta y algunas de sus transformaciones son los ladrillos con los que se construyen las alturas de las notas; son el único material que se puede utilizar.  El resto de elementos de la pieza, como el número de instrumentos, el ritmo, el carácter, la textura o las dinámicas, se deja a discreción del compositor. No serializar todos los {conjuntos} será la principal crítica al dodecafonismo por parte de los compositores serialistas que sucedieron a su creador, Arnold Schoenberg. Para los serialistas integrales, como Pierre Boulez, aquello restaba cohesión al modelo compositivo; para los dodecafonistas, aportaba libertad~\cite{boulez}.
+		El dodecafonismo es un sistema compositivo que predetermina la melodía y la armonía a partir de una ordenación de las doce notas de la escala cromática, que se llama \textbf{serie}. Esta y algunas de sus transformaciones son los ladrillos con los que se construyen las alturas de las notas; son el único material que se puede utilizar. El resto de elementos de la pieza, como el número de instrumentos, el ritmo, el carácter, la textura o las dinámicas, se deja a discreción del compositor. No serializar todos los conjuntos será la principal crítica al dodecafonismo por parte de los compositores serialistas que sucedieron a su creador, Arnold Schoenberg. Para los serialistas integrales, como Pierre Boulez, aquello restaba cohesión al modelo compositivo; para los dodecafonistas, aportaba libertad~\cite{boulez}.
 		
 		Precisamente la predeterminación dodecafónica, aunque parece limitante, permite realizaciones musicales y estilos de composición muy diferentes: Schoenberg daba un tratamiento tradicional a sus obras, ya que aun admiraba las formas clásicas; Alban Berg iba más allá al utilizar series que recordaban a las tríadas tonales; y, en cambio, Anton Webern evitaba radicalmente cualquier asociación con la tradición. 
 		
@@ -10,29 +10,26 @@
 
 \it
 \begin{enumerate}
-\item La serie \it{(sobre la que se construye la obra dodecafónica)} consta de las doce notas de la escala cromática dispuestas en un orden lineal específico. 
+\item La serie (sobre la que se construye la obra dodecafónica) consta de las doce notas de la escala cromática dispuestas en un orden lineal específico.
 		
 \item Ninguna nota aparece más de una vez en la serie.
 \end{enumerate}
 \rm
+	
+	Los dos primeros postulados expresan que una obra dodecafónica fundamenta su estructura sobre una permutación de la escala de doce semitonos. Dicha permutación $\sigma$ es una biyección del conjunto numerado de las doce notas \{Do = 0, Do\# = 1, Re = 2, Re\# = 3, Mi = 4, Fa = 5, F\# = 6, Sol = 7, Sol\# = 8, La = 9, La\# = 10, Si = 11\} consigo mismo, y se representa de esta forma:
+		
+	\[\drow{
+		\sigma(0),\sigma(1),\sigma(2),\sigma(3),\sigma(4),\sigma(5),\sigma(6),\sigma(7),\sigma(8),\sigma(9),\sigma(10),\sigma(11)
+	}\]
+		
+	La permutación $\sigma(m)$, con $m\in \mathbb{Z} / (12)$, pertenece al grupo simétrico de orden 12, $S_{12}$. Por ejemplo, en la Suite para piano Op. 25 Schoenberg utiliza como serie original en todos los movimientos de la obra la siguiente permutación $\sigma$:
+		
+	\[\sigma=\drow{4,5,7,1,6,3,8,2,11,0,9,10}\]	
+	\begin{center}
+		\includegraphics[width=12.1cm]{1.png}
+	\end{center}
 
-		
-		Los dos primeros postulados expresan que una obra dodecafónica fundamenta su estructura sobre una {permutación} de la escala de doce semitonos. Dicha permutación $\sigma$ es una biyección\xxx{Sugerencia: ¿Ponemos la definición de biyección en la sección de términos matemáticos?} del conjunto numerado de las doce notas \{Do = 0, Do\# = 1, Re = 2, Re\# = 3, Mi = 4, Fa = 5, F\# = 6, Sol = 7, Sol\# = 8, La = 9, La\# = 10, Si = 11\} consigo mismo, y se representa de esta forma:
-		
-		\[
-			\drow{
-				\sigma(0),\sigma(1),\sigma(2),\sigma(3),\sigma(4),\sigma(5),\sigma(6),\sigma(7),\sigma(8),\sigma(9),\sigma(10),\sigma(11)
-			}
-		\]
-		
-		La permutación $\sigma(m)$, con $m\in \mathbb{Z} / (12)$, pertenece al grupo simétrico de orden 12, $S_{12}$. Por ejemplo, en la Suite para piano Op. 25 Schoenberg utiliza como serie original en todos los movimientos de la obra la siguiente permutación $\sigma$:
-		
-		\[\sigma=\drow{4,5,7,1,6,3,8,2,11,0,9,10}\]	
-		\begin{center}
-			\includegraphics[width=12.1cm]{1.png}
-		\end{center}
-
-Los otros dos postulados restante son:
+Los otros dos postulados restantes son:
 
 \it
 \begin{enumerate}
@@ -42,33 +39,33 @@ Los otros dos postulados restante son:
 \item La serie puede usarse en sus cuatro aspectos desde cualquier nota de la escala.
 \end{enumerate}
 \rm	
-		Los dos últimos postulados amplían los recursos compositivos al admitir la transformación de la serie original mediante \emph{inversión}, \emph{retrogradación}, \emph{inversión retrógrada} y \emph{transposición}. %({No confundir con un 2-ciclo. Una transposición musical se corresponde con una traslación matemática.}) 
-		El compositor puede utilizar cualquiera de las transformaciones de una serie al componer su obra dodecafónica. El conjunto de series que puede utilizar, que viene dado por la serie original y todas sus posibles transformaciones, se conoce como \emph{espectro serial}; veáse~\cite{dominguez} para más información.
+
+	Los dos últimos postulados amplían los recursos compositivos al admitir la transformación de la serie original mediante \textbf{inversión}, \textbf{retrogradación}, \textbf{inversión retrógrada} y \textbf{transposición}.
+	El compositor puede utilizar cualquiera de las transformaciones de una serie al componer su obra dodecafónica. El conjunto de series que puede utilizar, que viene dado por la serie original y todas sus posibles transformaciones, se conoce como \emph{espectro serial}; veáse~\cite{dominguez} para más información.
 		
 	\subsection{Las transformaciones de una serie}
 		\label{transPsi}
 		Transformar una serie es matemáticamente equivalente a aplicar una {función} sobre la serie, y que asocie esa permutación a la permutación transformada. Por tanto, cualquier función transformativa $\Psi$ se aplica sobre el conjunto de las permutaciones, $S_{12}$.
 		
 	\subsubsection{Transposiciones}
-		La \emph{transposición}, mencionada en el cuarto postulado, consiste en subir o bajar la serie original un número determinado de semitonos. Por tanto, no se modifican los intervalos entre las notas, sino solamente la altura a la que está la serie. Ya que consideraremos todas las octavas equivalentes, debemos trabajar {módulo} 12.
+		La \textbf{transposición}, mencionada en el cuarto postulado, consiste en subir o bajar la serie original un número determinado de semitonos. Por tanto, no se modifican los intervalos entre las notas, sino solamente la altura a la que está la serie. Ya que consideraremos todas las octavas equivalentes, debemos trabajar {módulo} 12.
 		
-		La serie transportada $k$ semitonos (con $k$ constante), $T^{k}(\sigma)$, se construye sumando $k$ a $\sigma$ (mod. 12):
-		\[T^{k}(\sigma(m))=\sigma(m)+k\]		
-		{\[
-		T^{k}=
+		La serie transportada $k$ semitonos (con $k$ constante), $T^k(\sigma)$, se construye sumando $k$ a $\sigma$ (mod. 12):
+		\[T^k(\sigma(m))=\sigma(m)+k\]		
+		\[T^k=
 		\left(\begin{array}{*{7}c}
 			0&1&2&&9&10&11\\
-			\sigma(0)+{k}&\sigma(1)+{k}&\sigma(2)+{k}&
+			\sigma(0)+k&\sigma(1)+k&\sigma(2)+k&
 			\cdots&
-			\sigma(9)+{k}&\sigma(10)+{k}&\sigma(11)+{k}\\
+			\sigma(9)+k&\sigma(10)+k&\sigma(11)+k\\
 		\end{array}\right)
-		\]}
+		\]
 		
-		A su vez, $T^k$ se forma al componer $k$ transposiciones de 1 semitono: $T^{k}=T^1\circ T^1\circ\ldots\circ T^1$, $k$ veces. Debido a que $k$ es en realidad el exponente en la potencia de $T$, se coloca este número como superíndice.
+		A su vez, $T^k$ se forma al componer $k$ transposiciones de 1 semitono: $T^k=T^1\circ T^1\circ\ldots\circ T^1$, $k$ veces. Debido a que $k$ es en realidad el exponente en la potencia de $T$, se coloca este número como superíndice.
 		
-		Históricamente, la notación $\Psi_{k}$, $\Psi^{k}$ o $\Psi({k})$ se ha usado en sustitución de la composición de la transposición $T^{k}$ y otra función $\Psi$, en el respectivo orden: $\Psi^{k}=\Psi \circ T^{k} = \Psi(T^{k})$. Sin embargo, esta notación es especialmente ambigua y confusa, sobre todo al trabajar con funciones no conmutativas \textemdash cuando importa el orden en el que estén $T$ y $\Psi$\textemdash. Por ello, es preferible ceñirse a la notación estrictamente matemática; es decir, a la composición de funciones, aun omitiendo el símbolo $\circ$: \cancel{$\Psi_{k}$}, \cancel{$\Psi^{k}$}, \cancel{$\Psi({k})$} $\rightarrow \Psi T^{k}$.\xxx{Estos últimos símbolos quedan confusos. No se sabe bien qué significa la cancelación. Sugiero reescribir esta parte.}
+		Históricamente, la notación $\Psi_k$, $\Psi^k$ o $\Psi(k)$ se ha usado en sustitución de la composición de la transposición $T^k$ y otra función $\Psi$, en el respectivo orden: $\Psi^k=\Psi \circ T^k = \Psi(T^k)$. Sin embargo, esta notación es especialmente ambigua y confusa, sobre todo al trabajar con funciones no conmutativas \textemdash cuando importa el orden en el que estén $T$ y $\Psi$\textemdash. Por ello, es preferible ceñirse a la notación estrictamente matemática; es decir, a la composición de funciones, aun omitiendo el símbolo $\circ$, de esta manera: $\Psi T^{k}$.
 		
-		Una posible serie transportada sobre la permutación $\sigma$ de la Suite para piano Op. 25, con $k= 6$, es la siguiente serie $T^6$:
+		Una posible serie transportada sobre la permutación $\sigma$ de la Suite para piano Op. 25, con $k=6$, es la siguiente serie $T^6$:
 		\[T^6=\drow{10,11,1,7,0,9,2,8,5,6,3,4}\]	
 		\begin{center}
 			\includegraphics[width=12.1cm]{2.png}
@@ -77,18 +74,18 @@ Los otros dos postulados restante son:
 %===================
 	\subsubsection{Retrogradación}
 	
-		La \emph{retrogradación}\xxx{Sugerencia de formato: yo pondría las definiciones en negrita; las itálicas se usarán para la ironía, los títulos de obras, y otras.} consiste en leer la serie original desde la nota final hacia atrás, es decir, aplicar a la serie una simetría especular. De este modo, la primera nota irá al último puesto, la segunda al penúltimo, y así sucesivamente. La serie retrógrada se construye según la siguiente fórmula:
+		La \textbf{retrogradación} consiste en leer la serie original desde la nota final hacia atrás, es decir, aplicar a la serie una simetría especular. De este modo, la primera nota irá al último puesto, la segunda al penúltimo, y así sucesivamente. La serie retrógrada se construye según la siguiente fórmula:
 		\[R(\sigma(m))=\sigma(11-m)\]
 		\[{R=\drow{\sigma(11),\sigma(10),\sigma(9),\sigma(8),\sigma(7),\sigma(6),\sigma(5),\sigma(4),\sigma(3),\sigma(2),\sigma(1),\sigma(0)}}\]
 			
-		La serie retrógrada sobre la permutación $\sigma$ de la Suite Op. 25 es la siguiente serie R:	
+		La serie retrógrada sobre la permutación $\sigma$ de la Suite Op. 25 es la siguiente serie $R$:	
 		\[R=\drow{10,9,0,11,2,8,3,6,1,7,5,4}\]		
 		\begin{center}
 			\includegraphics[width=12.1cm]{3.png}
 		\end{center}
 		
 	\subsubsection{Inversión}
-		La \emph{inversión} consiste en cambiar la dirección \textemdash de ascendente a descendente y viceversa\textemdash~de los intervalos entre cada nota de la serie. Si el primer intervalo en la serie original $\sigma$ es de $+k$, el primer intervalo en la serie invertida $I$ será de $-k$ (siempre módulo 12), por lo que debemos cambiar el signo de $\sigma$ para construir $I$. Además, queremos que la primera nota de ambas series, I($\sigma$(0)) y $\sigma$(0), coincidan, así que debemos transportar la serie ($-\sigma$) un número $\lambda$ de semitonos para que esta condición se cumpla:
+		La \textbf{inversión} consiste en cambiar la dirección \textemdash de ascendente a descendente y viceversa\textemdash~de los intervalos entre cada nota de la serie. Si el primer intervalo en la serie original $\sigma$ es de $+k$, el primer intervalo en la serie invertida $I$ será de $-k$ (siempre módulo 12), por lo que debemos cambiar el signo de $\sigma$ para construir $I$. Además, queremos que la primera nota de ambas series, $I(\sigma(0))$ y $\sigma(0)$, coincidan, así que debemos transportar la serie $(-\sigma)$ un número $\lambda$ de semitonos para que esta condición se cumpla:
 		\begin{align*}
 		I(\sigma(0))=-\sigma(0)+\lambda&=\sigma(0)\\
 		\implies \lambda&=2\sigma(0)
@@ -113,9 +110,9 @@ Los otros dos postulados restante son:
 			
 			$R_0$, $R_1$, $R_2$\ldots
 			
-			I$_0$, I$_1$, I$_2$\ldots
+			$I_0$, $I_1$, $I_2$\ldots
 			
-			I$R_0$, I$R_1$, I$R_2$\ldots
+			$IR_0$, $IR_1$, $IR_2$\ldots
 			
 			\underline{Sintaxis matemática}
 			
@@ -132,7 +129,7 @@ Los otros dos postulados restante son:
 		
 		Dada una serie, su matriz dodecafónica es una representación visual de su espectro serial; es decir, del conjunto de series derivadas de esa serie. El espectro serial es todo el material compositivo sonoro del que se dispone para la composición de una obra dodecafónica. Al poder ordenar y disponer la información en una tabla, el compositor puede acceder a toda ella al mismo tiempo sin tener que calcular cada serie individualmente.		
 		
-		La matriz se lee en la dirección en la que aparece el nombre de la serie. Las series $T$ se leen de izquierda a derecha, mientras que las series R de derecha a izquierda. Las series $I$ se leen de arriba a abajo y las $IR$/$RI$ de abajo a arriba.
+		La matriz se lee en la dirección en la que aparece el nombre de la serie. Las series $T$ se leen de izquierda a derecha, mientras que las series $R$ de derecha a izquierda. Las series $I$ se leen de arriba a abajo y las $IR/RI$ de abajo a arriba.
 		
 		He creado un programa que devuelve en formato \LaTeX{} la matriz correspondiente a cualquier serie dodecafónica que se introduzca en teclado, además de producir la nomenclatura simple para cada serie. El código, escrito en C++, se puede encontrar en el enlace \url{https://gitlab.com/dodecafonismo/cppmatrices}.
 		
@@ -159,7 +156,7 @@ Los otros dos postulados restante son:
 		&RI_{0}&RI_{1}&RI_{3}&RI_{9}&RI_{2}&RI_{11}&RI_{4}&RI_{10}&RI_{7}&RI_{8}&RI_{5}&RI_{6}&
 		\end{array}\]
 	
-		Por otro lado, he escrito otro programa en el propio lenguaje \LaTeX{} que crea esta misma tabla con el comando \verb|\dmatrix|, y tiene cualquier serie como argumento: \verb|\dmatrix{4,5,7,1,6,3,8,2,11,0,9,10}|. %El código se encuentra en el Anexo \ref{app:latex}, página \pageref{app:latex1}. 
+		Por otro lado, he escrito otro programa en el propio lenguaje \LaTeX{} que crea esta misma tabla con el comando \verb|\dmatrix|, y tiene cualquier serie como argumento: \verb|\dmatrix{4,5,7,1,6,3,8,2,11,0,9,10}|.
 		El código se encuentra en mi paquete de \LaTeX{} \texttt{ddphonism}, incluido en el enlace  \url{https://www.ctan.org/pkg/ddphonism}.
 		La tabla aparece sin el orlado de nomenclaturas:
 
@@ -168,8 +165,6 @@ Los otros dos postulados restante son:
 \end{center}		
 
 		También he creado una página interactiva que genera matrices de cualquier serie para cualquier longitud serial, además de generar series aleatorias. Permite escoger entre dos numeraciones y dos nomenclaturas. Está escrita en Elm y el código puede encontrarse en \url{https://gitlab.com/dodecafonismo/matrices}.
+			
+		En este enlace se encuentra la aplicación web. Sus instrucciones de uso se encuentran al final de la página: \url{https://matrices.netlify.com/}.
 		
-%			\qrcode{https://matrices.netlify.com/}
-			
-			En este enlace se encuentra la aplicación web. Sus instrucciones de uso se encuentran al final de la página: \url{https://matrices.netlify.com/}.
-			
