--- a/07.Espectros.tex
+++ b/07.Espectros.tex
@@ -291,7 +291,7 @@
 			\end{tikzpicture}
 		\end{multicols}
 		
-		Sea $d=3$ y $n=6$. Escogiendo el primer número como 0$^{(0)}$, el segundo como 1$^{(0)}$ y el tercero como 2$^{(1)}$, no queda más remedio que escoger como comienzo el 0$^{(1)}$.
+		Sea $d=3$ y $n=6$. Escogiendo el primer número como 0$^{(0)}$, el segundo como 1$^{(0)}$ y el tercero como 2$^{(1)}$, no queda más remedio que escoger como comienzo del segundo ciclo el 0$^{(1)}$.
 		
 	\begin{multicols}{3}
 		\begin{tikzpicture}
@@ -383,8 +383,8 @@
 		\end{tikzpicture}
 		\end{center}
 		
-		Se escoge el primer punto de entre $\frac{n}{2}$ posibilidades. No son $n$ ya que saldrá la misma figura si se escoge el punto antipodal.
-		Con una rotación de $\uptheta_{{n}/{2}}$, el primer ciclo se escoge igual que antes, de $\left(\frac{n}{n/2}\right)^{\frac{n}{2}}\cdot \frac{n}{2}!=2^{\frac{n}{2}}\cdot \frac{n}{2}!$ maneras. Entonces queda la figura determinada. Esto lleva a las $\frac{n}{2}\cdot2^{\frac{n}{2}}\cdot\frac{n}{2}!$ formas de dibujar un polígono con las características buscadas.
+		Se escoge el primer punto de entre $\frac{n}{2}$ posibilidades. No son $n$ ya que saldría la misma figura si se escoge el punto antipodal.
+		Con una rotación de $\uptheta_{{n}/{2}}$, el primer ciclo se escoge igual que antes, de $\left(\frac{n}{n/2}\right)^{\frac{n}{2}}\cdot \frac{n}{2}!=2^{\frac{n}{2}}\cdot \frac{n}{2}!$ maneras. Y con esto ya queda la figura determinada. Esto lleva a las $\frac{n}{2}\cdot2^{\frac{n}{2}}\cdot\frac{n}{2}!$ formas de dibujar un polígono con las características buscadas.
 		
 		\subsubsection{Elementos estables mediante S}
 		
