--- a/Entrega/01.Historia.tex
+++ b/Entrega/01.Historia.tex
@@ -1,6 +1,8 @@
 \section{Introducción histórica del dodecafonismo}\label{ch:historia}
 
-Vamos a comenzar con una breve historia de la disonancia. La disonancia desempeñó un papel fundamental en la génesis del dodecafonismo, como veremos en seguida.
+En esta sección describiremos cuál fue el ambiente histórico y filosófico en el que se cultivó el primer modelo de serialismo musical: el \textbf{dodecafonismo}. A través de su historia analizaremos por qué el serialismo no fue una decisión aleatoria ni espontánea, sino que surgió de una necesidad estética de aquel periodo.
+%
+Vamos a comenzar con una breve crónica de la disonancia, tras lo cual describiremos las fases por las que el creador del dodecafonismo, Arnold Schoenberg, tuvo que pasar antes de concebirlo. %La disonancia desempeñó un papel fundamental en la génesis del dodecafonismo, como veremos enseguida.
 
 \subsection{La historia de la disonancia}
 La disonancia siempre ha formado parte de la experiencia musical. Con la música ha venido siempre emparejada la disonancia, mano a mano, como instrumento de contraste, confrontación y ruptura, pero también como elemento constructivo del discurso musical.
@@ -11,13 +13,13 @@ En la Antigua Grecia, la armonía musical se consideraba unida al resto del unive
 {\footnotesize (Tomado de \cite{mha} J. de Aixquivel, \textit{Memorias de Historia Antigua}, 1989.)}
 \end{quote}
 
-Es bien sabido que la Escuela de Pitágoras, con su estudio sobre proporciones entre notas, buscaba encontrar cuáles eran los intervalos más consonantes. Encontraban, a su vez, aquellos que no lo eran, y es así como se dio comienzo a la teoría de la disonancia.\xxx{Sugerencia: este párrafo podría explicar un poco más la teoría de la disonancia de los pitagóricos.}
+Es bien sabido que la Escuela de Pitágoras, con su estudio sobre proporciones entre notas, buscaba encontrar cuáles eran los intervalos más consonantes: eran aquellos cuyo ratio formaba una relación sencilla. El intervalo de octava era consonante porque su ratio era de 2:1, y de igual manera ocurría con los intervalos de quinta (3:2) y cuarta (4:3), a los que Aristóxeno comenzó a llamar \textit{sýmph$\bar{o}$nos} ($\sigma\acute{\upsilon}\mu\varphi\omega\nu o\varsigma$) \cite{cons}. En cambio, a los intervalos no tan sencillos se los llamaba \textit{diáph$\bar{o}$nos} ($\delta\iota\acute{\alpha}\varphi\omega\nu o\varsigma$), y fue entonces cuando se le dio nombre a la disonancia.
 
 Ya en la Edad Media, la polifonía fue forjando normas sobre su uso. La primera regla compositiva de la música occidental \textemdash según Knud Jeppesen \cite{jeppesen} \textemdash~fue la \emph{regla franconiana}, que expresaba que las disonancias debían ocurrir en la parte débil del compás, mientras que las consonancias en la parte fuerte. Es así como los compositores trenzaban consonancia y disonancia al tejer los hilos de la música.
 
 Poco a poco la disonancia pasó a ser usada como floritura melódica: en notas de paso, apoyaturas o retardos, entre otras. Esta función melódica fue impregnando el contrapunto hasta llegar a ser pieza clave en la continuidad de las voces. Adquirió entonces una nueva función contrapuntística, ¿y quién no se ha deleitado al escuchar una disonancia \textit{bachiana}?
 
-Pero la disonancia estaba aún inscrita a la tonalidad reinante. No fue hasta la introducción de acordes extraños que la disonancia pasó a ser el centro de atención. Para ello hubo que esperar hasta el siglo XIX, que fue testigo de un desarrollo del sistema armónico sin precedentes. \xxx{Más poesía aquí, más luz, más lenguaje metafórico aquí.}
+Pero la disonancia estaba aún inscrita a la tonalidad reinante. No fue hasta la introducción de acordes extraños que la disonancia pasó a ser el centro del interés musical, y fue \textit{in crescendo} apropiándose del foco de atención hasta llegar a ser más valiosa aún que la consonancia. Para ello hubo que esperar hasta el siglo XIX, que fue testigo de un asombroso desarrollo del sistema armónico que acabó por quebrantar todas las preconcepciones musicales anteriores.
 
 Para más información sobre la disonancia y su fascinante historia, recomendamos al lector el texto de Felipe Aguirre~\cite{aguirre}.
 
@@ -41,12 +43,12 @@ La idea del \emph{Gesamtkunstwerk} la desarrolló alrededor de 1850, y la plasmó 
 
 Así, a ojos de compositores posteriores, se habían agotado todas las posibilidades de la música tonal, y quizás ya había comenzado el viraje hacia el predominio de la disonancia con su abundante uso del cromatismo, como en el famoso primer acorde del drama musical \href{https://www.youtube.com/watch?v=SF4zN-Okonc}{\textit{Tristan und Isolde}} (1865). Consta de las notas fa-si-$\mbox{re\#}$-$\mbox{sol\#}$, y sus intervalos desde el fa son una cuarta aumentada, una sexta aumentada y una novena aumentada.
 
-Después de Wagner, otros compositores también estuvieron a las puertas de emancipar la disonancia, de desatarla de las ataduras que imponía la tonalidad. Por ejemplo, el gran compositor Gustav Mahler conseguía reflejar en sus sinfonías dos realidades paralelas: tanto la delicada fragilidad de la tradición anterior como la inminencia de su ruptura. El ejemplo más claro es el \href{https://www.youtube.com/watch?v=vHyV8noUXC0}{Adagio} de su Décima Sinfonía, que contiene una disonancia con once de las doce notas de la escala cromática. Y es que, sin lugar a dudas, la tonalidad ya preveía que iba a ser reemplazada. \xxx{No sé si esto es mejor que lo anterior.}
+Después de Wagner, otros compositores también estuvieron a las puertas de emancipar la disonancia, de desatarla de las ataduras que imponía la tonalidad. Por ejemplo, el gran compositor Gustav Mahler conseguía reflejar en sus sinfonías dos realidades paralelas: tanto la delicada fragilidad de la tradición anterior como la inminencia de su ruptura. El ejemplo más claro es el \href{https://www.youtube.com/watch?v=vHyV8noUXC0}{Adagio} de su Décima Sinfonía, que contiene una disonancia con once de las doce notas de la escala cromática. Y es que, sin lugar a dudas, la tonalidad ya preveía que iba a ser reemplazada.
 
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=5cm]{Gustav_Mahler.jpg}\\
-\caption{Gustav Mahler (1860\textemdash1911)}
+\caption{Gustav Mahler (1860\textemdash1911); figura tomada de \href{http://www.planethugill.com/2018/09/mahler-distilled-iain-farrington-and.html}{Planet Hugill}.}
 \end{center}
 \end{figure}
 
@@ -58,7 +60,7 @@ Fuertemente influido por Wagner y Mahler desde su adolescencia, Schoenberg comen
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=5cm]{Arnold_Schoenberg.jpg}\\
-\caption{Arnold Schoenberg (1874\textemdash1951)}
+\caption{Arnold Schoenberg (1874\textemdash1951); figura tomada de \href{http://es.nextews.com/59ce14c7/}{Nextews}.}
 \end{center}
 \end{figure}
 
@@ -68,7 +70,7 @@ De esta época es su primera obra importante, \href{https://www.youtube.com/watch
 
 Tras pasar por la etapa tonal posromántica, y debido a su convicción en la inexorabilidad de la evolución de la música hacia el cromatismo total, en 1908 Schoenberg se desligó de la tonalidad completamente con el ciclo de canciones \href{https://www.youtube.com/watch?v=3iXsKhaZB2Q}{\emph{Das Buch der Hängenden Gärten}}. 
 
-A partir de entonces se dedicó a componer fragmentos muy breves cuya estructura era definida por motivos y no por la armonía. Era esto lo que solía ocurrir en formas musicales anteriores como la forma sonata. A este periodo en sus composiciones se le llama \textbf{atonalidad libre}, aunque cabe destacar que Schoenberg rechazaba fervientemente este término:
+A partir de entonces se dedicó a componer fragmentos muy breves cuya estructura era definida por motivos y no por la armonía. Era esto lo que solía ocurrir en formas musicales anteriores como la forma sonata. A este periodo en sus composiciones se le llama atonalidad libre, aunque cabe destacar que Schoenberg rechazaba fervientemente este término:
 
 \begin{quote}
 \emph{La expresión ``música atonal'' es de lo más desafortunada \textemdash es como llamar a volar ``el arte de no caer'' o nadar ``el arte de no ahogarse''.}\\
@@ -94,6 +96,6 @@ En este contexto Schoenberg pudo reflexionar sobre sus técnicas compositivas, y 
 
 Su primera obra íntegramente dodecafónica, publicada también en 1923, es la Suite para piano Op. 25, que podrán ver a continuación. Es la pieza más temprana en la que Schoenberg usa series dodecafónicas en cada uno de los movimientos. En dos obras anteriores a ella usa series dodecafónicas, pero en movimientos aislados: la Op. 23, \href{https://www.youtube.com/watch?v=7A9HSlgDlQE}{\emph{5 St\"ucke}} (1920\textemdash23), en el movimiento de Waltz final; y su \href{https://www.youtube.com/watch?v=fzAFalLbXxg}{Serenata}, Op. 24, en su Soneto central.
 
-\xxx{Incluir vídeo}
+Las series utilizadas en la Suite Op. 25 servirán de ejemplo en este texto, y su tercer movimiento, \href{https://www.youtube.com/watch?v=scwNtGdop6w}{Musette}, será estudiado y analizado en el apartado \ref{musette} con el fin de entender una obra dodecafónica en toda su extensión. A continuación el lector podrá escuchar la Suite para piano Op. 25:
 
-Las series utilizadas en la Suite Op. 25 servirán de ejemplo en este texto, y su tercer movimiento, \href{https://www.youtube.com/watch?v=scwNtGdop6w}{Musette}, será estudiado y analizado en el apartado \ref{musette} con el fin de entender una obra dodecafónica en toda su extensión.
+\xxx{Incluir vídeo}
