Carpetas de entrega

--- a/Entrega I/01.Historia.tex
+++ b/Entrega I/01.Historia.tex
@@ -15,7 +15,7 @@ En la Antigua Grecia, la armonía musical se consideraba unida al resto del unive
 
 Es bien sabido que la Escuela de Pitágoras, con su estudio sobre proporciones entre notas, buscaba encontrar cuáles eran los intervalos más consonantes: eran aquellos cuyo ratio formaba una relación sencilla. El intervalo de octava era consonante porque su ratio era de 2:1, y de igual manera ocurría con los intervalos de quinta (3:2) y cuarta (4:3), a los que Aristóxeno comenzó a llamar \textit{sýmph$\bar{o}$nos} ($\sigma\acute{\upsilon}\mu\varphi\omega\nu o\varsigma$) \cite{cons}. En cambio, a los intervalos no tan sencillos se los llamaba \textit{diáph$\bar{o}$nos} ($\delta\iota\acute{\alpha}\varphi\omega\nu o\varsigma$), y fue entonces cuando se le dio nombre a la disonancia.
 
-Ya en la Edad Media, la polifonía fue forjando normas sobre su uso. La primera regla compositiva de la música occidental \textemdash según Knud Jeppesen \cite{jeppesen} \textemdash~fue la \emph{regla franconiana}, que expresaba que las disonancias debían ocurrir en la parte débil del compás, mientras que las consonancias en la parte fuerte. Es así como los compositores trenzaban consonancia y disonancia al tejer los hilos de la música.
+Ya en la Edad Media, la polifonía fue forjando normas sobre su uso. La primera regla compositiva de la música occidental \textemdash según Knud Jeppesen~\cite{jeppesen}\textemdash~fue la \emph{regla franconiana}, que expresaba que las disonancias debían ocurrir en la parte débil del compás, mientras que las consonancias en la parte fuerte. Es así como los compositores trenzaban consonancia y disonancia al tejer los hilos de la música.
 
 Poco a poco la disonancia pasó a ser usada como floritura melódica: en notas de paso, apoyaturas o retardos, entre otras. Esta función melódica fue impregnando el contrapunto hasta llegar a ser pieza clave en la continuidad de las voces. Adquirió entonces una nueva función contrapuntística, ¿y quién no se ha deleitado al escuchar una disonancia \textit{bachiana}?
 
@@ -30,7 +30,7 @@ Aunque las posibilidades que prometía la tonalidad parecían inagotables, sus lím
 {\footnotesize Mencionado en \cite{scho} \emph{Composition with twelve tones}, de \emph{Style and Idea}, 1950.}
 \end{quote}
 
-Esta época culminó con los dramas musicales de Richard Wagner, en los que todos los elementos de la obra estaban detalladamente estudiados por el compositor. A este concepto lo llamaba \emph{Gesamtkunstwerk} (``obra de arte total") \textemdash mencionado en \cite{wagner} \emph{Oper und Drama}, 1851 \textemdash, ya que se aseguraba personalmente de que en sus óperas las artes escénicas, musicales, poéticas y visuales se combinaran entre sí a la perfección.
+Esta época culminó con los dramas musicales de Richard Wagner, en los que todos los elementos de la obra estaban detalladamente estudiados por el compositor. A este concepto lo llamaba \emph{Gesamtkunstwerk} (``obra de arte total") \textemdash mencionado en \cite{wagner} \emph{Oper und Drama}, 1851\textemdash, ya que se aseguraba personalmente de que en sus óperas las artes escénicas, musicales, poéticas y visuales se combinaran entre sí a la perfección.
 
 \begin{figure}[h]
 \begin{center}
@@ -52,7 +52,7 @@ Después de Wagner, otros compositores también estuvieron a las puertas de emanci
 \end{center}
 \end{figure}
 
-Siguiendo la concepción del progreso como un camino ascendente, el paso siguiente para la composición musical debía consistir en deshacerse progresivamente de la tonalidad y desarrollar la ``{emancipación de la disonancia}"  \textemdash mencionado también en \cite{scho} \emph{Composition with twelve tones} \textemdash. Así, en el marco expresionista del cambio de siglo, fue como Arnold Schoenberg ideó sus teorías del pensamiento musical, y éstas dieron paso a la creación de la atonalidad.
+Siguiendo la concepción del progreso como un camino ascendente, el paso siguiente para la composición musical debía consistir en deshacerse progresivamente de la tonalidad y desarrollar la ``{emancipación de la disonancia}"  \textemdash mencionado también en \cite{scho} \emph{Composition with twelve tones}\textemdash. Así, en el marco expresionista del cambio de siglo, fue como Arnold Schoenberg ideó sus teorías del pensamiento musical, y éstas dieron paso a la creación de la atonalidad.
 
 \subsection{Hacia el atonalismo de Schoenberg}
 Fuertemente influido por Wagner y Mahler desde su adolescencia, Schoenberg comenzó componiendo al estilo posromántico de su época, llevando el cromatismo y la orquestación hasta el extremo. Sin embargo, y no espontáneamente, empezó a buscar en sus composiciones que cada sonido tuviera valor por sí mismo, un valor independiente de su funcionalidad tonal.
@@ -79,7 +79,7 @@ A partir de entonces se dedicó a componer fragmentos muy breves cuya estructura 
 
 \noindent A este periodo pertenece también su famoso ciclo de canciones \href{https://www.youtube.com/watch?v=vQVkbKULKpI}{\emph{Pierrot Lunaire}}, Op. 21 (1912). Su nombre completo es \textit{Tres veces siete poemas de Pierrot Lunaire de Albert Giraud}, ya que está dividida en 3 grupos de 7 canciones cada uno, cuyos textos son una selección de 21 poemas del ciclo homónimo de Albert Giraud. 
 
-Se encuentran en ella abundantes referencias al número 7. Schoenberg hace un uso extensivo de motivos de 7 notas a lo largo de la obra, mientras que el conjunto musical que la interpreta, incluyendo al director, consta de 7 miembros. De hecho, a este conjunto de instrumentos \textemdash flauta, clarinete, violín, violonchelo, piano y voz \textemdash~se le ha dado el nombre de \textit{ensemble Pierrot} en su honor.  Otros números importantes en la obra son el 3 y el 13. Cada poema consta de 13 líneas, mientras que la primera línea de cada poema aparece 3 veces: en las líneas 1, 7 y 13.
+Se encuentran en ella abundantes referencias al número 7. Schoenberg hace un uso extensivo de motivos de 7 notas a lo largo de la obra, mientras que el conjunto musical que la interpreta, incluyendo al director, consta de 7 miembros. De hecho, a este conjunto de instrumentos \textemdash flauta, clarinete, violín, violonchelo, piano y voz\textemdash~se le ha dado el nombre de \textit{ensemble Pierrot} en su honor.  Otros números importantes en la obra son el 3 y el 13. Cada poema consta de 13 líneas, mientras que la primera línea de cada poema aparece 3 veces: en las líneas 1, 7 y 13.
 
 En esta obra no sólo hay una ausencia total de relaciones tonales, sino que el tratamiento vocal evita también cualquier relación estética con las técnicas tradicionales: es un \emph{Sprechgesang}, un canto hablado. De hecho, Schoenberg se refiere a estas piezas no como canciones, sino como melodramas. Véase~\cite{diaz} para más información.
 
