--- a/Entrega I/02.Dodecafonismo.tex
+++ b/Entrega I/02.Dodecafonismo.tex
@@ -155,8 +155,8 @@ Los otros dos postulados restantes son:
 		&RI_{0}&RI_{1}&RI_{3}&RI_{9}&RI_{2}&RI_{11}&RI_{4}&RI_{10}&RI_{7}&RI_{8}&RI_{5}&RI_{6}&
 		\end{array}\]
 	
-		Por otro lado, he escrito otro programa en el propio lenguaje \LaTeX{} que crea esta misma tabla con el comando \verb|\dmatrix|, y tiene cualquier serie como argumento: \verb|\dmatrix{4,5,7,1,6,3,8,2,11,0,9,10}|.
-		El código se encuentra en mi paquete de \LaTeX{} \texttt{ddphonism}, incluido en el enlace  \url{https://www.ctan.org/pkg/ddphonism}.
+		Por otro lado, he escrito un comando en el propio lenguaje \LaTeX{} que crea esta misma tabla con el comando \verb|\dmatrix|, y tiene cualquier serie como argumento: \verb|\dmatrix{4,5,7,1,6,3,8,2,11,0,9,10}|.
+		El comando se encuentra en el paquete de \LaTeX{} \texttt{ddphonism}, disponible en el enlace \url{https://www.ctan.org/pkg/ddphonism}.
 		La tabla aparece sin el orlado de nomenclaturas:
 
 \begin{center}
