--- a/Entrega I/03.Suite.tex
+++ b/Entrega I/03.Suite.tex
@@ -56,7 +56,7 @@
 				\end{matrix}
 			&T^6&IT^6&T^0&T^0&\mathbf{c}.\mathbf{31}\\\end{array}\]
 		
-		A continuación se encuentra el análisis serial completo de la Musette:
+		A continuación se encuentra el análisis serial completo de la Musette, tomado de~\cite{clercq}:
 
 \newpage
 \begin{figure}[!h]
