--- a/Entrega I/Serialismo-matematicas.bib
+++ b/Entrega I/Serialismo-matematicas.bib
@@ -1,7 +1,7 @@
 
 @misc{scho,
   author       = {Schoenberg, Arnold},
-  title        = {Composition with twelve tones},
+  title        = {{Composition with twelve tones}},
   url          = {\url{http://music.ucsc.edu/sites/default/files/14.SchoenbergTwelveTone.pdf}},
   howpublished={\url{http://music.ucsc.edu/sites/default/files/14.SchoenbergTwelveTone.pdf}},
   year         = {1923},
@@ -10,7 +10,7 @@
 
 @misc{cons,
   author       = {World Heritage Encyclopedia},
-  title        = {Consonance and dissonance},
+  title        = {{Consonance and dissonance}},
   url          = {\url{http://self.gutenberg.org/articles/eng/Consonance_and_dissonance}},
   howpublished = {\url{http://self.gutenberg.org/articles/eng/Consonance_and_dissonance}},
   year         = {2017},
@@ -19,7 +19,7 @@
 
 @misc{wagner,
   author       = {Wagner, Richard},
-  title        = {Oper und Drama},
+  title        = {{Oper und Drama}},
   url          = {\url{http://users.skynet.be/johndeere/wlpdf/wlpr0063.pdf}},
   howpublished = {\url{http://users.skynet.be/johndeere/wlpdf/wlpr0063.pdf}},
   year         = {1851}
@@ -27,7 +27,7 @@
 
 @misc{hauer,
   author       = {Schoenberg, Arnold},
-  title        = {Hauer's Theories},
+  title        = {{Hauer's Theories}},
   url          = {\url{https://books.google.cz/books?id=jbXtxJezk5cC}},
   howpublished = {\url{https://books.google.cz/books?id=jbXtxJezk5cC}},
   year         = {1923},
@@ -36,7 +36,7 @@
 
 @book{jeppesen,
   author       = {Jeppesen, Knud},
-  title        = {Counterpoint: The Polyphonic Vocal Style of the Sixteenth Century},
+  title        = {{Counterpoint: The Polyphonic Vocal Style of the Sixteenth Century}},
   isbn         = {9780486270364},
   lccn         = {39015933},
   series       = {(The Prentice-Hall music series)},
@@ -48,7 +48,7 @@
 
 @book{mha,
   author       = {de Aixquivel, J.},
-  title        = {Memorias de Historia Antigua},
+  title        = {{Memorias de Historia Antigua}},
   type         = {book},
   url          = {\url{https://books.google.es/books?id=m6zZrpltkzYC}},
   note         = {\url{https://books.google.es/books?id=m6zZrpltkzYC}},
@@ -58,7 +58,7 @@
 
 @misc{aguirre,
   author       = {Aguirre, Felipe},
-  title        = {El concepto de ``disonancia" en Adorno y en la nueva música},
+  title        = {{El concepto de ``disonancia" en Adorno y en la nueva música}},
   howpublished = {\url{http://www.felipeaguirre.co/blog/2019/1/28/el-concepto-de-disonancia-en-adorno-y-en-la-nueva-musica}},
   type         = {web page},
   url          = {\url{http://www.felipeaguirre.co/blog/2019/1/28/el-concepto-de-disonancia-en-adorno-y-en-la-nueva-musica}},
@@ -68,7 +68,7 @@
 
 @misc{boulez,
   author       = {Boulez, Pierre},
-  title        = {Schoenberg is dead},
+  title        = {{Schoenberg is dead}},
   howpublished = {\url{http://www.ubu.com/papers/Boulez-Schoenberg+Is+Dead.pdf}},
   type         = {web page},
   url          = {\url{http://www.ubu.com/papers/Boulez-Schoenberg+Is+Dead.pdf}},
@@ -79,7 +79,7 @@
 
 @article{clercq,
   author       = {Clercq, Trevor de},
-  title        = {A Window into Tonality via the Structure of Schoenberg's ``Musette'' from the Piano Suite, op. 25},
+  title        = {{A Window into Tonality via the Structure of Schoenberg's ``Musette'' from the Piano Suite, op. 25}},
   journal      = {Theory/Analysis of 20th-Century Music},
   year         = {2006},
   note         = {Accesible en \url{http://www.midside.com/pdf/eastman/fall06/th513/schoenberg_op25_analysis.pdf};  consultado en línea en agosto de 2019}
@@ -89,7 +89,7 @@
  
 @phdthesis{diaz,
   author       = {Díaz de la Fuente, Alicia}, 
-  title        = {Estructura y significado en la música serial y aleatoria},
+  title        = {{Estructura y significado en la música serial y aleatoria}},
   school       = {Universidad Nacional de Educación a Distancia},
   year         = {2005},
   address      = {Departamento de Filosofía},
@@ -98,7 +98,7 @@
 
 @article{dominguez,
   author       = {Domínguez Romero, Manuel},
-  title        = {Las matemáticas en el serialismo musical},
+  title        = {{Las matemáticas en el serialismo musical}},
   Journal      = {Sigma},
   Volume       = {41},
   Number       = {24},
@@ -130,7 +130,7 @@
 
 @mastersthesis{kinney,
   author       = {Kinney, James P.},
-  title        = {Twelve-tone Serialism: Exploring the Works of Anton Webern},
+  title        = {{Twelve-tone Serialism: Exploring the Works of Anton Webern}},
   school       = {University of San Diego},
   year         = {2015},
   address      = {University of San Diego},
@@ -139,7 +139,7 @@
 	
 @misc{ilomaki,
   author       = {Ilomäki, Tuukka},
-  title        = {On the Similarity of Twelve-Tone Rows},
+  title        = {{On the Similarity of Twelve-Tone Rows}},
   journal      = {Sibelius Academy},
   howpublished = {\url{https://helda.helsinki.fi/handle/10138/235041}},
   type         = {web page},
@@ -150,7 +150,7 @@
 
 @incollection{hyde,
   author       = {Farindon, Peter}, 
-  title        = {Dodecaphonism: Schoenberg},
+  title        = {{Dodecaphonism: Schoenberg}},
   booktitle    = {Models of Musical Analysis: Early Twentieth-century Music},
   publisher    = {Blackwell Pub },
   year         = {1993},
@@ -160,12 +160,10 @@
   address      = {Oxford, Inglaterra},
   note         = {\url{https://books.google.es/books?id=JSdVHAAACAAJ}}
 }
-		
-
 
 @phdthesis{xiao,
   author       = {Xiao, June}, 
-  title        = {Bach's Influences in the Piano Music of Four 20th Century Composers},
+  title        = {{Bach's Influences in the Piano Music of Four 20th Century Composers}},
   school       = {Jacobs School of Music},
   year         = {2014},
   address      = {Universidad de Indiana},
